# CppFreeMock

./: .gitignore  .gitmodules  CMakeLists.txt  runtime_patch.h
arm/: runtime_patch_impl.h
hooks/: Hooker.h  HookerArm.h  HookerArm64.h  HookerX64.h
win32/: mman_win32.h  runtime_patch_impl.h
x86/: runtime_patch_impl.h
